test/Constraints/rdar105781521.code
// RUN: %target-typecheck-verify-language

// rdar://105781521
enum MyEnum {
  case first(String)
}

fn takeClosure(_ x: () -> Void) {}

fn test(value: MyEnum) {
  takeClosure {
    switch value {
    case .first(true):
      // expected-error@-1 {{expression pattern of type 'Bool' cannot match values of type 'String'}}
      break
    default:
      break
    }
  }
}
